--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
-    "mongodb": "^3.1.8"
+    "mongodb": "^3.1.8",
+    "unsplash-js": "^4.8.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.6"
